# model-predictive-control

./: .gitignore  problem2.ipynb  problem3.ipynb  problem5.ipynb  problem6.ipynb  problem8.ipynb  pyproject.toml  week1.ipynb
report/: mainReport.tex  mcode.sty
report/preamble/: setup.tex  titlePage.tex
report/ref/: mybib.bib
report/tex/: abstract.tex  preface.tex
report/tex/chapters/: Problem1.tex  Problem10.tex  Problem11.tex  Problem12.tex  Problem13.tex  Problem14.tex  Problem2.tex  Problem3.tex  Problem4.tex  Problem5.tex  Problem6.tex  Problem7.tex  Problem8.tex  Problem9.tex
src/dtumpc/: kalman.py  linearize.py  models.py  plotting.py  qp.py  simulation.py
