[project]
name = "dtumpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "control>=0.10.2",
    "ipykernel>=6.30.1",
    "jax>=0.8.2",
    "jaxopt>=0.8.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pip>=25.2",
    "scipy>=1.16.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"